FLEX-137 :sparkles: Feature: eureka discovery에 맞게 cors, webclient 수정
<footer>
- 관련 : #37