@@ -1,77 +1,48 @@
 package codeping.flex.gateway.global.config;
 
-import codeping.flex.gateway.global.properties.ServerDomainProperties;
-import java.util.List;
-import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
-import org.springframework.http.HttpHeaders;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+
 @Configuration
-@RequiredArgsConstructor
 public class CorsConfig {
 
-    private final ServerDomainProperties serverDomainProperties;
-
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(serverDomainProperties.getService()));
-        configuration.setAllowedMethods(List.of("GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of(HttpHeaders.AUTHORIZATION));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
-
     @Profile("local")
     public CorsWebFilter localCorsWebFilter() {
-        return createCorsWebFilter(getLocalAllowedOrigins());
+        return createCorsWebFilter(
+                "http://localhost:3000",
+                "http://localhost:8080",
+                "http://localhost:8081"
+        );
     }
 
     @Bean
     @Profile("dev")
     public CorsWebFilter devCorsWebFilter() {
-        return createCorsWebFilter(getDevAllowedOrigins());
+        return createCorsWebFilter(
+                "http://localhost:3000",
+                "http://dev.do-flex.co.kr:8080",
+                "http://dev.do-flex.co.kr:8081"
+        );
     }
 
-    private CorsWebFilter createCorsWebFilter(List<String> allowedOrigins) {
+    private CorsWebFilter createCorsWebFilter(String... allowedOrigins) {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOrigins(allowedOrigins);
+        corsConfig.setAllowedOrigins(Arrays.asList(allowedOrigins));
         corsConfig.setMaxAge(3600L);
-        corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        corsConfig.setAllowedHeaders(List.of("*"));
+        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        corsConfig.setAllowedHeaders(Arrays.asList("*"));
+        corsConfig.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfig);
 
         return new CorsWebFilter(source);
-    }
-
-    private List<String> getLocalAllowedOrigins() {
-        return List.of(
-                "http://localhost:8080",
-                "http://localhost:8081",
-                "http://localhost:8082",
-                "http://localhost:8086"
-        );
-    }
-
-    private List<String> getDevAllowedOrigins() {
-        return List.of(
-                "http://dev.do-flex.co.kr:8080",
-                "http://dev.do-flex.co.kr:8081",
-                "http://dev.do-flex.co.kr:8082",
-                "http://dev.do-flex.co.kr:8086"
-        );
     }
 }
